feat: add new endpoint get variant by id also add repo service and handler, model, dto
